<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_en"
            android:gravity="center"
            android:textSize="23sp"
            android:layout_marginTop="80dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_vi"
            android:gravity="center"
            android:textSize="17sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/bg_imdb"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/danh_gia"
                    android:textSize="10sp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7.0"
                    android:textSize="17sp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="55dp"
                    android:layout_marginBottom="12dp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/bg_p_date"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KHỞI CHIẾU"
                    android:textSize="10sp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_premiere"
                    android:textSize="17sp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="55dp"
                    android:layout_marginBottom="12dp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/bg_duration"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="THỜI LƯỢNG"
                    android:textSize="10sp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="165p"
                    android:textSize="17sp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="55dp"
                    android:layout_marginBottom="12dp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#28000000"
                android:text="Thể loại: 3D"
                android:padding="5dp"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/large_text"
                android:textSize="17sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </LinearLayout>




</android.support.v4.widget.NestedScrollView>
